A First Set Of Routes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,8 @@
   },
   "rules": {
     "prettier/prettier": "warn",
-    "no-console": "off"
+    "no-console": "off",
+    "require-jsdoc": "off",
+    "new-cap": ["error", { "capIsNewExceptions": ["Router"] }]
   }
 }
-
-
