--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,31 @@ services:
     ports:
       - "3000:3000"
       - "9229:9229"
+    env_file:
+      - ./env/server.env
     volumes:
       - ./:/app
       - /app/node_modules
     stdin_open: true
     tty: true
     container_name: server
+  database:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    ports:
+      - "3306:3306"
+    env_file:
+      - ./env/mysql.env
+    volumes:
+      - mysql-data-wde:/var/lib/mysql
+    container_name: database
+
+volumes:
+  mysql-data-wde:
+    name: mysql-data-wde
+    external: true
+
+# Please note that the use of "mysql_native_password" is not recommended:
+# https://dev.mysql.com/doc/refman/8.0/en/upgrading-from-previous-series.html#upgrade-caching-sha2-password
+# (this is just an example, not intended to be a production configuration)
