--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "ThomasCode92",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mysql2": "^2.3.3"
