--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "csurf": "^1.11.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-mysql-session": "^2.1.8",
+    "express-session": "^1.17.3",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
