--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "stripe": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8.18.0",
